<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txtRegCurhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="@dimen/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Input Nama Lengkap -->
    <EditText
        android:id="@+id/edtRegNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/hintFullName"
        android:inputType="textPersonName"
        android:textColor="@color/blackText"
        android:textColorHint="@color/subTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegCurhat" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/edtRegEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/blackText"
        android:textColorHint="@color/subTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegNama" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/edtRegPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textColor="@color/blackText"
        android:textColorHint="@color/subTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegEmail" />

    <!-- Konfirmasi Password -->
    <EditText
        android:id="@+id/edtRegConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/hintKonfPass"
        android:inputType="textPassword"
        android:textColor="@color/subTextColor"
        android:textColorHint="@color/subTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtRegPassword" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btnRegis"
        android:textSize="@dimen/btnText"
        android:textColor="@color/white"
        android:onClick="register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegConfirm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/toLogin"
        android:textColor="@color/primary"
        android:textSize="@dimen/text"
        android:textStyle="italic"
        android:onClick="toLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnReg" />

</androidx.constraintlayout.widget.ConstraintLayout>